<resources>    <string name="app_name">Movie Kedua</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <string name="nav_header_title">Android Studio</string>    <string name="nav_header_subtitle">android.studio@android.com</string>    <string name="nav_header_desc">Navigation header</string>    <string name="action_settings">Languages Setting</string>    <string name="description">Movie Catalogue Project have a five project. its the second project with requirements is include navigation upcoming, now playing, and search movie. And with multi languages, is Indonesian and English.</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="about">About</string>    <string name="help">Help</string>    <string name="settings">Settings</string>    <string name="upcoming_movie">Upcoming Movie</string>    <string name="now_playing">Now Playing</string>    <string name="search_movie">Search Movie</string>    <string name="home">Home</string>    <string name="title_about">About</string>    <string name="title_help">Help</string>    <string name="title_home">Home</string>    <string name="title_nowplaying">Now Playing Movie</string>    <string name="title_search">Search Movie</string>    <string name="title_upcoming">Upcoming Movie</string>    <string name="rating">Ratings</string>    <string name="release">Release of Date</string>    <string name="overview">Overview</string>    <string name="movie_title">Movie Title</string>    <string name="date_of_release">Date of Release</string>    <string name="movie_description">Movie Description</string>    <string name="detail">Detail</string>    <string name="favorite">Favorite</string>    <string name="app_title">Movie Catalogue Dicoding Project 2</string>    <string name="search_movie_title">Search Movie Title</string>    <string name="btnSearch">Search</string>    <string name="detail_movie">Detail Movie</string>    <string name="message">Finding Movie… Please Wait</string></resources>