<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:showIn="navigation_view">    <group android:checkableBehavior="single">        <item            android:id="@+id/nav_home"            android:icon="@drawable/baseline_home_black_48dp"            android:title="@string/home" />        <item            android:id="@+id/nav_search"            android:icon="@drawable/baseline_search_black_48dp"            android:title="@string/search_movie" />        <item            android:id="@+id/nav_nowplaying"            android:icon="@drawable/baseline_play_circle_outline_black_48dp"            android:title="@string/now_playing" />        <item            android:id="@+id/nav_upcoming"            android:icon="@drawable/baseline_video_library_black_48dp"            android:title="@string/upcoming_movie" />        <item            android:id="@+id/nav_help"            android:icon="@drawable/baseline_help_black_48dp"            android:title="@string/help" />        <item            android:id="@+id/nav_about"            android:icon="@drawable/baseline_info_black_48dp"            android:title="@string/about" />    </group></menu>