<?xml version="1.0" encoding="utf-8"?><android.support.v7.widget.CardView    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_marginTop="6dp"    android:orientation="horizontal"    android:layout_width="match_parent"    android:layout_height="wrap_content">    <LinearLayout        android:orientation="horizontal"        android:paddingTop="6dp"        android:paddingBottom="6dp"        android:layout_width="match_parent"        android:layout_height="180dp">        <ImageView            android:id="@+id/tvposter"            android:layout_gravity="center"            android:src="@mipmap/ic_launcher"            android:layout_width="100dp"            android:layout_height="150dp" />        <LinearLayout            android:paddingLeft="16dp"            android:orientation="vertical"            android:layout_width="match_parent"            android:layout_height="180dp">            <LinearLayout                android:orientation="vertical"                android:layout_width="match_parent"                android:layout_height="120dp">                <TextView                    android:id="@+id/tvTitle"                    android:text="@string/movie_title"                    android:textStyle="bold"                    android:maxLines="1"                    android:textSize="11pt"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />                <TextView                    android:id="@+id/tvRelease"                    android:text="@string/date_of_release"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />                <TextView                    android:id="@+id/tvDesc"                    android:text="@string/movie_description"                    android:maxLines="3"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />            </LinearLayout>            <LinearLayout                android:orientation="horizontal"                android:layout_width="match_parent"                android:layout_gravity="bottom"                android:layout_height="60dp">                <Button                    android:id="@+id/btnDetail"                    android:text="@string/detail"                    style="@style/Widget.AppCompat.Button.Colored"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content" />                <Button                    android:id="@+id/favorite"                    android:text="@string/favorite"                    style="@style/Widget.AppCompat.Button.Colored"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content" />            </LinearLayout>        </LinearLayout>    </LinearLayout></android.support.v7.widget.CardView>