<?xml version="1.0" encoding="utf-8"?><RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".layout.DetailActivity">    <ImageView        android:id="@+id/detailPoster"        android:layout_width="match_parent"        android:layout_height="240dp"        android:background="@android:color/darker_gray"        android:src="@mipmap/ic_launcher" />    <ScrollView        android:layout_below="@id/detailPoster"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <LinearLayout            android:layout_below="@id/detailPoster"            android:padding="16dp"            android:orientation="vertical"            android:layout_width="match_parent"            android:layout_height="wrap_content">            <TextView                android:id="@+id/detailTitle"                tools:text="Movie Title"                android:textStyle="bold"                android:textSize="24sp"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:text="@string/rating"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:padding="4dp"                android:id="@+id/detailRate"                android:background="@android:color/darker_gray"                tools:text="Movie Ratings"                android:layout_width="match_parent"                android:layout_height="wrap_content"/>            <TextView                android:text="@string/release"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detailRelease"                tools:text="Release date"                android:padding="4dp"                android:background="@android:color/darker_gray"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:text="@string/overview"                android:textStyle="bold"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/detailOverview"                android:background="@android:color/darker_gray"                android:padding="4dp"                tools:text="Movie Description"                android:layout_width="match_parent"                android:layout_height="wrap_content" />        </LinearLayout>    </ScrollView></RelativeLayout>